Add permissions to project